2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Update build files.

2010-05-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Add support for enumerating over the
	  Groups if the CollectionView has been grouped.

2010-05-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Add a helper class to simplify
	  implementing INotifyPropertyChanged class.

2010-05-05  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Add CollectionViewNode to the build.

2010-05-04  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: update build files.

2010-04-30  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am: Add StandardCollectionViewGroup to the build.

2010-04-29  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Work around smcs regression #601141

2010-04-29  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am: Add an IDeferRefresh interface which is
	  implemented by the default CollectionView implementation and
	  CollectionViewSource. This allows both classes to use the
	  same machinery for their DeferRefresh calls.

	* System.Windows.mdp: Update build files

2010-04-27  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Add the beginnings of a default
	  implementation of ICollectionView.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Add a missing enum and a missing class.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Stub out the missing 'Section' class.

2010-04-22  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: update build files.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: Add ToolTip.cs to the solution.

2010-04-20  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am: