@@ -713,6 +713,7 @@
     <File subtype="Code" buildaction="Compile" name="System.Windows.Data/GroupEnumerator.cs" />
     <File subtype="Code" buildaction="Compile" name="System.Windows.Data/EnumerableCollectionView.cs" />
     <File subtype="Code" buildaction="Compile" name="System.Windows.Data/CollectionView.cs" />
+    <File subtype="Code" buildaction="Compile" name="System.Windows.Data/ICollectionViewFactory.cs" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
