@@ -1,3 +1,9 @@
+2010-05-13  Alan McGovern  <amcgovern@novell.com>
+
+	* Makefile.am:
+	* System.Windows.mdp: Add in the ICollectionViewFactory
+	  interface and make CollectionViewSource use it.
+
 2010-05-12  Alan McGovern  <amcgovern@novell.com>
 
 	* Makefile.am:
